# OGBN

./: CNAME  index.html  main.css  main.js  package-lock.json  package.json
Danhyeye/: index.html  main.css
Github/: index.html
Tauri/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
Tauri/src/: App.css
Tauri/src-tauri/: .env.example  Cargo.toml
Tauri/src-tauri/src/: lib.rs
Tauri/src-tauri/src/config/: config.rs  mod.rs
Tauri/src-tauri/src/database/: mod.rs  mongo.rs  redis.rs
Tauri/src-tauri/src/models/: auth.rs  mod.rs  pin.rs  user.rs
Tauri/src-tauri/src/routes/: auth_routes.rs  mod.rs  pin_routes.rs  user_routes.rs
Tauri/src-tauri/src/services/: auth_service.rs  mod.rs  otp_service.rs  pin_service.rs  user_service.rs
Tauri/src-tauri/src/utils/: crypto.rs  mod.rs  validation.rs
app/: globals.css  layout.tsx  page.tsx
app/components/: drag-drop-game.tsx  landing.tsx
app/components/regions/: central.tsx  north.tsx  south.tsx
app/games/: layout.tsx  page.tsx
components/ui/: accordion.tsx
my-nextjs-app/: package-lock.json
my-nextjs-app/.cursor/rules/: cusor-rules.mdc
my-nextjs-app/app/: page.tsx
my-nextjs-app/app/components/: desktop-layout.tsx  mobile-layout.tsx
pixel/: package.json
pixel/src-tauri/: Cargo.toml  tauri.conf.json
types/: types.ts
