[package]
name = "tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
mongodb = "2.8"
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
redis = { version = "0.23", features = ["tokio-comp"] }
tauri = "2.2.7"
tauri-plugin-opener = "2.2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
lazy_static = "1"
jsonwebtoken = "9"

